# ironclad

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  request-for-ironclad-development-work.md
docs/: README.md
docs/mcp-development/: API_DISCOVERY.md  PHASE_1_TESTING_PLAN_UPDATED.md  PHASE_2_TRENDING_ANALYSIS_DESIGN.md
docs/mcp-feedback/: FEATURE_REQUESTS_QUICK_START.md  QUICK_ROADMAP_REFERENCE.md
docs/mcp-setup/: DEPLOYMENT_GUIDE.md  GCP_SETUP_GUIDE.md  QUICK_START.md
docs/mcp-usage/: AI_ROUTING_GUIDE.md  SHOPIFY_IRONCLAD_KNOWLEDGE_BASE.md
knowledge_base/: AI_ROUTING_GUIDE.md  FEATURE_REQUESTS.md  FEATURE_ROADMAP.md  SHOPIFY_IRONCLAD_KNOWLEDGE_BASE.md  critical_fields.json  record_types.json
scripts/: README.md  deploy-local.sh  lookup_record_info.py  restart_server.sh  server_status.sh  start_server.sh  stop_server.sh  sync-to-github.sh
src/ironclad_mcp/: __init__.py  __main__.py  auth.py  date_utils.py  gcp_secrets.py  http_server.py  ironclad_client.py  server.py  vault_client.py
